--- a/src/test/resources/props.properties
+++ b/src/test/resources/props.properties
@@ -2,4 +2,5 @@ base.url = https://edujira.ifellow.ru/
 login = avasukov
 password = 123Qwerty
 # comment webdriver.local.path - then Selenide will run the browser on the Internet
-webdriver.local.path = src/test/resources/WebDriver/chromedriver.exe
+webdriver.local.path = src/test/resources/WebDriver/chromedriver100.exe
+#remout.url =
