--- a/src/test/resources/props.properties
+++ b/src/test/resources/props.properties
@@ -1,6 +1,6 @@
 base.url = https://edujira.ifellow.ru/
-login = avasukov
-password = 123Qwerty
+login = IFEL_JIRA_LOGIN
+password = IFEL_JIRA_PSW
 # comment webdriver.local.path - then Selenide will run the browser on the Internet
 webdriver.local.path = src/test/resources/WebDriver/chromedriver100.exe
 #remout.url =
