--- a/src/test/resources/ru.vasyukov/props.properties
+++ b/src/test/resources/ru.vasyukov/props.properties
@@ -5,4 +5,4 @@ password = 123Qwerty
 # IFEL_JIRA_PSW
 # comment webdriver.local.path - then Selenide will run the browser on the Internet
 webdriver.local.path = src/test/resources/ru.vasyukov/WebDriver/chromedriver101.exe
-#remout.url =
+#remote.url =
