--- a/src/test/resources/ru.vasyukov/props.properties
+++ b/src/test/resources/ru.vasyukov/props.properties
@@ -1,8 +1,13 @@
-base.url = https://edujira.ifellow.ru/
-login = avasukov
-# IFEL_JIRA_LOGIN
-password = 123Qwerty
-# IFEL_JIRA_PSW
-# comment webdriver.local.path - then Selenide will run the browser on the Internet
-webdriver.local.path = src/test/resources/ru.vasyukov/WebDriver/chromedriver101.exe
+# timeouts in ms
+default.timeout.implicit.ms=6000
+default.timeout.explicit.ms=6000
+# comment webdriver.chrome.local.path - then Selenide will run the browser on the Internet
+#webdriver.chrome.local.path = src/test/resources/ru.vasyukov/WebDriver/chromedriver101.exe
+webdriver.edge.local.path=src/test/resources/ru.vasyukov/WebDriver/msedgedriver.exe
+# uncomment for choice browser
+#type.browser = edge
+# uncomment for don't close browser after test
+#dont.close.browser = ok
+# uncomment for headless ???
+#headless.mode = ok
 #remote.url =
