--- a/src/test/resources/ru.vasyukov/listener.properties
+++ b/src/test/resources/ru.vasyukov/listener.properties
@@ -1,6 +1,6 @@
 # ATTENTION ! Mode 'all' is slow, 'all' & 'window'/'both' is very slow
 # choice listener: off all driver elements
-listener.type=all
+listener.type=off
 # listener around method: all before after
 listener.around.method=after
 # listener method list: list separated by commas or empty
