--- a/src/test/resources/ru.vasyukov/application.properties
+++ b/src/test/resources/ru.vasyukov/application.properties
@@ -1,5 +1,12 @@
 base.url.jira=https://edujira.ifellow.ru/
 login=avasukov
-# IFEL_JIRA_LOGIN
 password=123Qwerty
-# IFEL_JIRA_PSW
+project.full.name=Test (TEST)
+project.name=Test
+task.name=TestSelenium
+task.theme=Test create task AT and3081
+task.type=??????
+task.version=Version 2.0
+task.status.do=???????
+task.status.in.work=? ??????
+task.status.done=??????
