--- a/src/test/resources/ru.vasyukov/browser.properties
+++ b/src/test/resources/ru.vasyukov/browser.properties
@@ -3,16 +3,18 @@ default.timeout.implicit.ms=6000
 default.timeout.explicit.ms=6000
 
 # comment webdriver.chrome.local.path - then Selenide will run the browser on the Internet
-#webdriver.chrome.local.path = src/test/resources/ru.vasyukov/WebDriver/chromedriver101.exe
+#webdriver.chrome.local.path=src/test/resources/ru.vasyukov/WebDriver/chromedriver101.exe
 webdriver.edge.local.path=src/test/resources/ru.vasyukov/WebDriver/msedgedriver.exe
 
+# Selenoid
+#remote.url=http://127.0.0.1:4444/wd/hub
+
 # uncomment for choice browser
-#type.browser = edge
+#type.browser=edge
 
 # uncomment for don't close browser after test
-dont.close.browser = ok
+#dont.close.browser=ok
 
 # uncomment for headless ???
-#headless.mode = ok
+#headless.mode=ok
 
-#remote.url =
