--- a/src/test/resources/ru.vasyukov/listener.properties
+++ b/src/test/resources/ru.vasyukov/listener.properties
@@ -1,13 +1,13 @@
 # ATTENTION ! Mode 'all' is slow, 'all' & 'window'/'both' is very slow
 # choice listener: off all driver elements
-listener.type=all
+listener.type = elements
 
 # listener around method: all before after
-listener.around.method=after
+listener.around.method = all
 
 # listener method list: list separated by commas or empty
-listener.method.list=sendKeys,click,findElement
+listener.method.list = click
 
 # ATTENTION ! Mode 'element'/'both' is blinking
 # mode screenshot of elements: both window element
-listener.mode.elements=both
+listener.mode.elements = both
